--- a/application/build.gradle
+++ b/application/build.gradle
@@ -19,8 +19,11 @@ dependencies {
     compile project(':persistence-jpa-repository')
     compile project(':LazyLoading-orchestrator')
     compile 'org.postgresql:postgresql:42.2.6'
+    
     compile 'org.springframework.boot:spring-boot-starter-webflux:2.0.3.RELEASE'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: '2.3.0.RELEASE'
+
+    testCompile('io.projectreactor:reactor-test')
 
 }
 
