corregir error en versión de gradle

--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ subprojects {
 
     dependencies {
         testCompile 'junit:junit:4.12'
-        testCompile 'org.springframework.boot:spring-boot-starter-test'
+        testCompile 'org.springframework.boot:spring-boot-starter-test:2.0.3.RELEASE'
 
     }
     
